# profile_vars_plugin

./: .gitignore  Makefile  README.md  ansible.cfg  playbook.yml  pyproject.toml
callback/: profile_vars.py
group_vars/: all.yml  test_1.yml  test_3.yml  test_children_2.yml
inventory/: .config.ini  dynamic_inventory.py
