[tool.poetry]
name = "profile_vars_plugin"
version = "0.1.0"
description = ""
authors = ["BBeRsErKeRR <ddarkwatchh@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8.5.0"
Faker = "^25.2.0"
natsort = "^8.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
bandit = "^1.7.5"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
